added comments section

--- a/BlogApp/BlogApp/Views/Entry/EditEntry.cshtml
+++ b/BlogApp/BlogApp/Views/Entry/EditEntry.cshtml
@@ -14,4 +14,4 @@
     <button type="submit">Submit</button>
 }
 
-@Html.ActionLink("return to blog", "Home", "Home")
+@Html.ActionLink("return to blog", "Index", "Home")
