--- a/BlogApp/BlogApp/Views/Comment/Index.cshtml
+++ b/BlogApp/BlogApp/Views/Comment/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model BlogApp.Models.CommentViewModel
+@model BlogApp.Models.Comment.CommentViewModel
 
     <div><b>Date: </b>@Model.Entry.Date</div>
     <div><b>Title: </b>@Model.Entry.Title</div>
