--- a/BlogApp/BlogApp/Views/Entry/EditEntry.cshtml
+++ b/BlogApp/BlogApp/Views/Entry/EditEntry.cshtml
@@ -1,17 +1,20 @@
 ﻿
-@model BlogApp.Models.EditEntryViewModel
-<h2>EditEntry</h2>
+@model BlogApp.Models.Entry.EditEntryViewModel
+<fieldset>
+<legend>EditEntry</legend>
 @using(@Html.BeginForm("EditEntry", "Entry", FormMethod.Post))
 {
+    @Html.HiddenFor(x => x.ReplaceThisEntry.Id)
+
     <div><b>Title</b></div>
     <p>@Html.EditorFor(x => x.ReplaceThisEntry.Title)</p>
-    <div><b>Entry</b></div>
-    @Html.ValidationMessageFor(x => x.ReplaceThisEntry.Passage)
-    <p>@Html.TextAreaFor(x => x.ReplaceThisEntry.Passage)</p>
-    <div>Last Modified: @Model.DateModified</div>
     
-
+    <div><b>Entry</b></div>
+    <p>@Html.TextAreaFor(x => x.ReplaceThisEntry.Passage)</p>
+    
+    <div>Last Modified: @Model.ReplaceThisEntry.Date</div>
+    
     <p><button type="submit">Submit</button></p>
 }
-
+</fieldset>
 <p>@Html.ActionLink("return to blog", "Index", "Home")</p>
